--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,20 @@ body {
 }
 
 .canvas {
-    width: 700px;
+    width: 1400px;
     height: 700px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    cursor: crosshair
 }
 
 .controls {
-    margin-top : 80px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 
 .controls .controls_btns {
     margin-bottom: 30px;
@@ -48,14 +48,15 @@ body {
     transform: scale(0.97)
 }
 
-
 .controls .controls_colors {
     display: flex;
+    justify-content: space-between;
+    width: 505px;
 }
 
 .controls_colors .controls_color {
     width: 50px;
-    height:50px;
+    height: 50px;
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
